# Harmony

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lobby.rs  main.rs  messages.rs  route.rs  ws.rs
backend/src/api/: route.rs  ws.rs
frontend/: Cargo.toml  custom.scss  index.html  style.css  trunk.toml
frontend/src/: main.rs
frontend/src/components/: input.rs  message.rs  mod.rs  names.rs  room.rs  websocket.rs
src/: fart.txt  lib.rs  main.rs
