[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
uuid = {version = "1.3.2", features=["v4"]}
serde = {version= "1.0.160", features = ["derive"]}
Harmony = {path=".."}

