[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5"
actix-web="3.2.0" 
actix-web-actors="3"
actix = "0.10.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = "1.0.162"
cargo-watch = "8.4.0"
once_cell = "1.17.1"
