[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.84"
yew-router = "0.17.0"
yew-stdweb = "0.18.0"
web-sys = "0.3.61"
gloo = "0.8.0"
trunk = "0.16.0"
reqwasm = "0.5.0"
uuid = { vesrion = "1.3.2", features = ["v4"] }
once_cell = "1.17.1"
rand = "0.8.5"
gloo-console = "0.2.3"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
